--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
     <head>
         {{ partial "head.html" . }}
     </head>
-    <body id="page-top">
+    <body id="page-top"{{ with .Site.Params.hero.bodyClass }} class="{{ . }}"{{ end}}>
         {{ if or .Site.Params.navigation.links.about .Site.Params.navigation.links.services .Site.Params.navigation.links.portfolio .Site.Params.navigation.links.contact }}
             {{ partial "nav.html" . }}
         {{ end }}
