--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -73,6 +73,10 @@ p {
     color: rgba(255,255,255,.7);
 }
 
+.hero-light .text-faded {
+    color: rgba(255,255,255,.7);
+}
+
 section {
     padding: 100px 0;
 }
@@ -135,9 +139,16 @@ aside {
         border-color: rgba(255,255,255,.3);
         background-color: transparent;
     }
+    .hero-light .navbar-default {
+        border-color: rgba(0,0,0,.3);
+    }
 
     .navbar-default .navbar-header .navbar-brand {
         color: rgba(255,255,255,.7);
+    }
+
+    .hero-light .navbar-default .navbar-header .navbar-brand {
+        color: rgba(0,0,0,.7);
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -148,6 +159,11 @@ aside {
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
         color: rgba(255,255,255,.7);
+    }
+
+    .hero-light .navbar-default .nav > li>a,
+    .hero-light .navbar-default .nav>li>a:focus {
+        color: rgba(0,0,0,.7);
     }
 
     .navbar-default .nav > li>a:hover,
@@ -195,6 +211,10 @@ header {
     -o-background-size: cover;
 }
 
+.hero-light header {
+    color: #000;
+}
+
 header .header-content {
     position: relative;
     width: 100%;
@@ -218,6 +238,10 @@ header .header-content .header-content-inner p {
     font-size: 16px;
     font-weight: 300;
     color: rgba(255,255,255,.7);
+}
+
+.hero-light header .header-content .header-content-inner p {
+    color: rgba(0,0,0,.7);
 }
 
 @media(min-width:768px) {
