--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -141,6 +141,7 @@ aside {
     }
     .hero-light .navbar-default {
         border-color: rgba(0,0,0,.3);
+        background-color: rgba(255,255,255,0.4);
     }
 
     .navbar-default .navbar-header .navbar-brand {
