--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -60,6 +60,11 @@ p {
     line-height: 1.5;
 }
 
+ul, ol {
+    list-style-type: none;
+    padding-left: 0;
+}
+
 .bg-primary {
     background-color: #f05f40;
 }
