--- a/layouts/partials/modals.html
+++ b/layouts/partials/modals.html
@@ -1,5 +1,5 @@
 {{ "<!-- Portfolio Modals -->" | safeHTML }}
-{{ range .Site.Data.projects }}
+{{ range .Site.Data.trip }}
 <div class="portfolio-modal modal fade" id="portfolioModal{{ .modalID }}" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -18,24 +18,24 @@
                         {{ if and .title .description }}
                             <hr class="star-primary">
                         {{ end }}
-                        <img src="img/portfolio/{{ .img }}" class="img-responsive img-centered" alt="">
+                        <img src="{{ .img }}" class="img-responsive img-centered" alt="">
                         {{ with .description }}
                             <p>{{ . | markdownify }}</p>
                         {{ end }}
                         {{ if or .client .date .category }}
                             <ul class="list-inline item-details">
                                 {{ if .client }}
-                                    <li>{{ with $.Site.Params.portfolio.modal.client }}{{.}}: {{ end }}
+                                    <li>{{ with $.Site.Params.trip.modal.client }}{{.}}: {{ end }}
                                         <strong><a href="{{ with .clientLink }}{{ . }}{{ else }}#{{ end }}">{{ .client }}</a></strong>
                                     </li>
                                 {{ end }}
                                 {{ if .date }}
-                                    <li>{{ with $.Site.Params.portfolio.modal.date }}{{.}}: {{ end }}
+                                    <li>{{ with $.Site.Params.trip.modal.date }}{{.}}: {{ end }}
                                         <strong><a href="#">{{ .date }}</a></strong>
                                     </li>
                                 {{ end }}
                                 {{ if .category }}
-                                    <li>{{ with $.Site.Params.portfolio.modal.category }}{{.}}: {{ end }}
+                                    <li>{{ with $.Site.Params.trip.modal.category }}{{.}}: {{ end }}
                                         <strong><a href="#">{{ .category }}</a></strong>
                                     </li>
                                 {{ end }}
