--- a/static/css/modals.css
+++ b/static/css/modals.css
@@ -16,8 +16,8 @@ body {
     margin: 0 auto;
 }
 
-.portfolio-modal .modal-content {
-    padding: 100px 0;
+.trip-modal .modal-content {
+    padding: 0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
@@ -27,20 +27,20 @@ body {
     box-shadow: none;
 }
 
-.portfolio-modal .modal-content h2 {
+.trip-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
 }
 
-.portfolio-modal .modal-content img {
+.trip-modal .modal-content img {
     margin-bottom: 30px;
 }
 
-.portfolio-modal .modal-content .item-details {
+.trip-modal .modal-content .item-details {
     margin: 30px 0;
 }
 
-.portfolio-modal .close-modal {
+.trip-modal .close-modal {
     position: absolute;
     top: 25px;
     right: 25px;
@@ -48,13 +48,14 @@ body {
     height: 75px;
     background-color: transparent;
     cursor: pointer;
+    z-index: 1;
 }
 
-.portfolio-modal .close-modal:hover {
+.trip-modal .close-modal:hover {
     opacity: .3;
 }
 
-.portfolio-modal .close-modal .lr {
+.trip-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
     height: 75px;
@@ -65,7 +66,7 @@ body {
     transform: rotate(45deg);
 }
 
-.portfolio-modal .close-modal .lr .rl {
+.trip-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
     height: 75px;
@@ -75,7 +76,7 @@ body {
     transform: rotate(90deg);
 }
 
-.portfolio-modal .modal-backdrop {
+.trip-modal .modal-backdrop {
     display: none;
     opacity: 0;
 }
