--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,8 +15,11 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}font-awesome/css/font-awesome.min.css" type="text/css">
 {{ "<!-- Plugin CSS -->" | safeHTML }}
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/animate.min.css" type="text/css">
+{{ "<!-- Swiper CSS -->" | safeHTML }}
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/photoswipe.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/photoswipe/default-skin.css">
 {{ "<!-- Custom CSS -->" | safeHTML }}
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/creative.css" type="text/css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/sailingcrew.css" type="text/css">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/modals.css" type="text/css">
 {{ "<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->" | safeHTML }}
 {{ "<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->" | safeHTML }}
