--- a/layouts/partials/trips.html
+++ b/layouts/partials/trips.html
@@ -1,28 +1,11 @@
 <section class="no-padding" id="trips">
     <div class="container-fluid">
         <div class="row no-gutter">
-            {{ range .Site.Data.trip }}
-            <div class="col-lg-4 col-sm-6">
-                <a href="#portfolioModal{{ .modalID }}" class="portfolio-box portfolio-link" data-toggle="modal">
-                    <img src="{{ .img }}" class="img-responsive" alt="">
-                    {{ if and .category .title }}
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            {{ with .category }}
-                            <div class="project-category text-faded">
-                                {{ . }}
-                            </div>
-                            {{ end }}
-                            {{ with .title }}
-                            <div class="project-name">
-                                {{ . }}
-                            </div>
-                            {{ end }}
-                        </div>
-                    </div>
-                    {{ end }}
-                </a>
-            </div>
+
+            {{ range .Data.Pages }}
+
+                {{ .Render "summary"}}
+
             {{ end }}
         </div>
     </div>
