--- a/static/css/sailingcrew.css
+++ b/static/css/sailingcrew.css
@@ -519,3 +519,31 @@ body {
     overflow: visible;
     position: relative;
 }
+
+.gallery {
+    float: right;
+}
+.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+.gallery figure {
+    display: block;
+    float: left;
+    margin: 0 5px 5px 0;
+    width: 80px;
+}
+
+.gallery figcaption {
+    display: none;
+}
+
+span[itemprop="copyrightHolder"] {
+    color: #888;
+    float: right;
+}
+
+span[itemprop="copyrightHolder"]:before {
+    content: "Foto: ";
+}
