--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -1,9 +1,9 @@
 
-{{ if .Site.Data.trip }}
+{{ if .Data.Pages }}
 <section id="location" class="no-padding" data->
     <div class="hidden">
-        {{ range .Site.Data.trip }}
-        <a class="kml-track" href="{{ .kml }}">{{ .title }}</a>
+        {{ range where .Site.Pages "Params.category" "trip" }}
+        <a class="kml-track" href="{{ .Params.kml }}">{{ .Params.title }}</a>
         {{ end }}
     </div>
     <a href="https://www.google.com/maps?z=16&q={{ .Site.Params.location.latitude }},{{ .Site.Params.location.longitude }}&ll={{ .Site.Params.location.latitude }},{{ .Site.Params.location.longitude }}">
