--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -15,24 +15,13 @@
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
 
+
+
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-
-                {{ if and .Site.Params.crew.headline .Site.Params.navigation.links.crew }}
+                {{ range $index, $element := .Site.Params.navigation.links }}
                     <li>
-                        <a class="page-scroll" href="#crew">{{ .Site.Params.navigation.links.crew }}</a>
-                    </li>
-                {{ end }}
-
-                {{ if and .Site.Data.trip .Site.Params.navigation.links.trips }}
-                    <li>
-                        <a class="page-scroll" href="#trips">{{ .Site.Params.navigation.links.trips }}</a>
-                    </li>
-                {{ end }}
-
-                {{ if and .Site.Params.contact .Site.Params.navigation.links.contact }}
-                    <li>
-                        <a class="page-scroll" href="#contact">{{ .Site.Params.navigation.links.contact }}</a>
+                        <a class="page-scroll" href="#{{ $index }}">{{ $element }}</a>
                     </li>
                 {{ end }}
             </ul>
