show number of images in a trip

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -17,6 +17,9 @@
                     {{ .Title }}
                 </div>
                 {{ end }}
+                <div class="trip-images-count">
+                    {{ len .Params.images }} images
+                </div>
             </div>
         </div>
         {{ end }}
