--- a/layouts/partials/location.html
+++ b/layouts/partials/location.html
@@ -3,7 +3,7 @@
 <section id="location" class="no-padding" data->
     <div class="hidden">
         {{ range where .Site.Pages "Params.category" "trip" }}
-        <a class="kml-track" href="{{ .Params.kml }}">{{ .Params.title }}</a>
+        <a class="kml-track" href="{{ .Params.kml.path }}">{{ .Params.title }}</a>
         {{ end }}
     </div>
     <a href="https://www.google.com/maps?z=16&q={{ .Site.Params.location.latitude }},{{ .Site.Params.location.longitude }}&ll={{ .Site.Params.location.latitude }},{{ .Site.Params.location.longitude }}">
