--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -20,9 +20,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 {{ range $index, $element := .Site.Params.navigation.links }}
+                    {{ if and $index $element }}
                     <li>
                         <a class="page-scroll" href="#{{ $index }}">{{ $element }}</a>
                     </li>
+                    {{ end }}
                 {{ end }}
             </ul>
         </div>
