integrated photoswipe / replaced modals

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,9 +20,8 @@
     </div>
 </section>
 
-{{ block "modals" . }}{{ end }}
 
-{{ block "location" . }}{{ end }}
+{{ block "storymap" . }}{{ end }}
 
 {{ partial "js.html" . }}
 </body>
