--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,6 +21,9 @@
 {{ "<!-- Custom CSS -->" | safeHTML }}
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/sailingcrew.css" type="text/css">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/modals.css" type="text/css">
+
+{{ "<!-- Storymap CSS -->" | safeHTML }}
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/storymap.css" type="text/css">
 {{ "<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->" | safeHTML }}
 {{ "<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->" | safeHTML }}
 {{ "<!--[if lt IE 9]>" | safeHTML }}
