--- a/static/css/sailingcrew.css
+++ b/static/css/sailingcrew.css
@@ -302,6 +302,7 @@ header .header-content .header-content-inner p {
     position: relative;
     margin: 0 auto;
     max-width: 650px;
+    cursor: pointer;
 }
 
 .portfolio-box-caption {
